# amor

./: .gitignore  MVP.md  README.md  amor.service  amorshi  behemoth.md  build_pi.sh  check_status.py  forme.md  insta_test.py  social_mcp_research.md  todo.md  whatsapp-bridge.service  whatsapp-mcp.service  whatsapp-poller.service  whatsapp_poller.py
fuck/amor/: forme.md
fuck/amor/lemmelearn/: Cargo.toml  notes.md  todo.md
fuck/amor/lemmelearn/amorshi/: master.md  tools.md
fuck/amor/lemmelearn/amorshi/scripts/: insta_dm.py  insta_listener.py  read_cpu_temp.py
fuck/amor/lemmelearn/src/: main.rs
fuck/amor/lemmelearn/src/tool/: files.rs  instagram.rs  memory.rs  mod.rs  search.rs
lemmelearn/: Cargo.toml  notes.md
lemmelearn/amorshi/: allofit.md  ask_ai.md  behemoth.md  lokipref.md  master.md  memory.md  multiuser.md  reminders.md  tools.md  whatsapp_plan.md
lemmelearn/amorshi/scripts/: instagram_mcp.py  tars_speak.py
lemmelearn/amorshi/users/: 5678901234.md  loki.md  user_map.json  users.md
lemmelearn/src/: config.rs  main.rs  speak.rs  telegram.rs
lemmelearn/src/tool/: bash.rs  memory.rs  mod.rs  reminders.rs  scripts.rs  worker.rs
